clusters/takeout/apps/dizquetv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dizquetv
  namespace: default
spec:
  # type: LoadBalancer
  type: NodePort
  selector:
    app: dizquetv
  ports:
  - port: 80
    targetPort: 8000
