clusters/takeout/apps/dizquetv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dizquetv
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: dizquetv-credentials
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - "*.qtosw.com"
      secretName: letsencrypt
  rules:
  - host: dizquetv.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dizquetv
            port:
              number: 80
